--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,13 @@
         "activeTab",
         "scripting"
     ],
+    "background": {
+        "service_worker": "src/background.js",
+        "type": "module"
+    },
+    "host_permissions": [
+        "http://localhost:11434/*"
+    ],
     "content_scripts": [
         {
             "matches": [
