--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
         "activeTab",
         "scripting"
     ],
+    "action": {},
     "background": {
         "service_worker": "src/background.js",
         "type": "module"
@@ -21,7 +22,11 @@
             ],
             "js": [
                 "src/utils/extractor.js",
+                "src/utils/ui.js",
                 "src/content.js"
+            ],
+            "css": [
+                "src/ui/styles.css"
             ]
         }
     ]
